hphp/hack/test/typecheck/as_expression/primitive4.php.like_types.exp
File "primitive4.php", line 5, characters 12-16:
Invalid argument (Typing[4110])
File "primitive4.php", line 3, characters 12-14:
Expected int
File "primitive4.php", line 5, characters 12-16:
But got null
File "primitive4.php", line 5, characters 12-16:
Invalid argument (Typing[4110])
File "primitive4.php", line 3, characters 12-14:
Expected int
File "primitive4.php", line 5, characters 12-16:
But got nonnull
